# figures

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: circle.hpp  figure.hpp  helper.hpp  mainWindow.hpp  rectangle.hpp  triangle.hpp
include/factory/: RectangleCreator.hpp  circleCreator.hpp  creator.hpp  rectangleCreator.hpp  triangleCreator.hpp
src/: circle.cpp  figure.cpp  helper.cpp  mainWindow.cpp  rectangle.cpp  triangle.cpp
